bad/assign_field_class_of_field_class_down.example_compiler_output
ERROR
[1mbad/assign_field_class_of_field_class_down.lat:12:16: [1;31merror: [0;1massigning to `Y` from incompatible type `X`[m
	(new D).c.fld = new X;
	              [1;32m^[m
